edits on design - based on notes

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -120,8 +120,8 @@ This chapter
 <!-- - exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review) -->
 
 - gives an overview of the evolution of the key pedagogical features of the tools of learning design used in my research process
-- draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
-- outlines 3 key conflicts using the terminology of Saninno in TADS
+- (rewrite) draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
+- outlines 4 key conflicts using the terminology of Saninno in TADS
 - Presents a synthesis to initial barriers (and) tactics to overcome them
 
 <!-- - Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions. -->
@@ -259,17 +259,23 @@ However in its styling it is playful and editorial picks and write up celebrate 
 #### Online graphics editors - Piskel -->
 
 
-### Context of  Vignette
+### Vignette 4.1 - An example of game making activity in P2
 
 The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently on his game design. The tool shown in screenshots is the code playground glitch (see chapter 2 and glossary).
 
+#### Table of Vignette
 https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit
 
 ### Description of levels of activity illustrated using the vignette
 
-This sections outlines a short description of the vignette above focusing on the overall activity and its place within evolution of learning design. It will use concepts from activity theory to describe elements of the activity system. Activity theory allows researchers to identify intersecting or nested systems of activity with varied goals. Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses. While this chapter focuses primarily on the tools and resources, future chapter also draw on this framework for wider analysis.
+<!-- The following sections describe of the vignette above focusing on the overall activity and its place within evolution of learning design.
 
-ALTERNATIVE SIMPLIER INTRO TO THIS SECTION
+It will use concepts from activity theory to describe elements of the activity system. Activity theory allows researchers to identify intersecting or nested systems of activity with varied goals.
+
+Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses. While this chapter focuses primarily on the tools and resources, future chapter also draw on this framework for wider analysis. -->
+
+<!-- ALTERNATIVE SIMPLIER INTRO TO THIS SECTION -->
+
 The following sections outline different scopes of activity to ground the reader in the overall activity and introduce later tensions between system elements. Each section follows a pattern: the activity is described in general, then examples of activity at that scope from the vignette above are described, ending with brief analysis or signposting to where the activity in explored in greater depth.
 
 <!-- The following descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole]. -->
@@ -278,13 +284,13 @@ The following sections outline different scopes of activity to ground the reader
 
 #### Environmental factors and objectives
 
-There are several wider objectives of activity which may vary  including; parents facilitating coding and design learning for children, the children's motivations of being part of a fun club-like programme, and my own motivation of conducting research.
+As explored in the literature review, there are several wider objectives of the type creative design activity involved in this research. Aligning with my experiences, I have selected several important streams and represented them in an illustration 4.x  below. These include: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; and participating with other home educators in a creative environment and thus building team and communication skills; and fun on the part of the children participants.
 
-![At Dia Environmental ](./Pictures/At_dia_3_v1.png){width=95%}
+![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v1.png){width=95%}
 
 NOTE - CAN ADD THE OBJECTIVES INTO THE ARROWS ON THE DIAGRAM
 
-High-level objectives exist including: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; and participating with other home educators in a creative environment and thus building team and communication skills; and fun on the part of the children participants.
+While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes]
 
 
 <!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
@@ -308,20 +314,25 @@ The shared objective of one activity system is to make entertaining and educatio
 
 <!-- Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0 -->
 
-![At Dia 1](./Pictures/At_dia_2_v1.png){width=95%}
+![Illustration 4.x - Larger objectives at game making level ](./Pictures/At_dia_2_v1.png){width=95%}
 
-The imagined end users are students and staff in the Manchester Met Brooks building where their games are  shared in arcade cabinets at the end of the course. An additional audience are friends and family who can be send the games to play online.
+There are diverse end audiences for the games. The final target audience are students and staff in the Manchester Met Brooks building where their games are shared in arcade cabinets at the end of the course. An additional audience are friends and family who can be send the games to play online.
 
-![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater2.jpg){width=95%}
+The more immediate audience for the evolving games are peer game makers during the making sessions. For example, in the vignette above, Toby begins the session playing his own game based on a shared template. During the session he invites many other group members to play his game. He initiates and responds to may conversations around the difficultly of the game he has designed. Analysis of this scope of activity is continued in chapter six.
 
 <!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
 
-The more immediate audience for the evolving games are peer game makers during the making sessions. In the vignette above, Toby begins the session playing his own game based on a shared template. During the session he invites many other group members to play his game. He initiates and responds to may conversations around the difficultly of the game he has designed. Analysis of this scope of activity is continued in chapter six.
+![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater2.jpg){width=95%}
+
+NOTE - More on large scope in AT terms? What is needed here?
+
 
 #### Mid-level objective - Implementing game elements
 
 
-The process of making a game was driven learners setting goals and requesting help to implement game features. The process involved a diversity of tools and resources depending on the feature chosen and the preferred approach of the learner. For this research, I have chosen to privilege the implementation of each pattern as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process [@barab_using_2002]. To help ground the reader, the following section describes this scope of the activity using the context of the above vignette.
+The process of making a game was driven learners setting goals and requesting help to implement game features. The process involved a diversity of tools and resources depending on the feature chosen and the preferred approach of the learner.
+
+
 
 <!-- | Subject         | Objective             | Tools & Processes          |
 |------|-------------|------------|
@@ -346,11 +357,11 @@ At this scope of activity, using the terminology of Engestrom in 3GAT, the objec
 
 In the example above Toby progresses from playtesting his own game to altering it. The code to change the layout of the platforms of the game is already included in the starting template. Thus is able add a new platform by making simple code changes. Toby retests the game immediately by clicking on the preview element of the code environment.
 
-By this stage, a collection or menu of elements or design patterns (see chapter two and glossary) for the chosen game type of a platformer was in place. Toby browses the web page of a menu of game design patterns and selects moving enemies.
+a collection or menu of elements or design patterns (see chapter two and glossary) for the chosen game type of a platformer was in place. Toby browses the web page of a menu of game design patterns and selects moving enemies.
 
 <!-- However within that wider objective there may be a variety of goals depending on the participant. In this case Toby's goal is addresses the challenge and variety of the game playing experience. -->
 
-While some game patterns were simple to add, e.g. altering the location of platforms, other more complicated features involved several stages and varied tools to implement. The next section describes key tools and processes.
+While some game patterns were simple to add, e.g. altering the location of platforms, other more complicated features involved several stages and varied tools to implement. The next section describes these stages as discrete code and design structures.
 
 <!-- NOTE - Other participants;s motivations - explored later? -->
 
@@ -372,6 +383,10 @@ While some game patterns were simple to add, e.g. altering the location of platf
 #### Smaller objective / actions - Implementing discrete code and design structures
 
 <!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
+
+NOTE - Overall description and justification of this section.
+
+
 
 Toby undertakes some tasks fluently, for example his the quick navigation between different areas of the game code, the game preview window and  sources of documentation. Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby was undertaking certain chains of processes in a fluid way that shows that actions had become operations. As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers.
 
@@ -398,13 +413,10 @@ NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and 
 
 ### Using scopes of activity as a tool for analysis.
 
-NOTE - explain why the above is useful / relevant
+The identification of different scopes of activity systems aids analysis of the complex and interwoven cultural, social and personal actions [@rogoff_observing_1995].
 
-The structure of the following chapters broadly mirrors the three main scopes of activity described above. The first concern cultural aspects of making a game together in a group of learners and is explored in chapter six. The second addresses the repeated process of altering or adding new game design patterns to the game and is explored in chapter five. Finally, the use of coding and creative tools to undertake the discrete specific actions and operations which make up whole is explored, in part, in this chapter.
+In this thesis, chapter six has a focus on cultural aspects of making a game together and chapter five explores social organisation around the activity of adding game design patterns chapter five. This chapter broadly aligns with a personal dimension of activity, specifically the use of tools and resources via the description of key contradiction in emerging game making activities. The next section begins to chart emerging tensions via a concise description of the evolution of tool use in different phases of the study.
 
-To do this the next section concisely charts emerging tensions in activity through a description of the evolution of tool use in the phases of the study.
-
-Later larger contradictions of different scope are signposted and one key contradiction in tool use is analysed in more depth.
 
 <!-- to highlight possible tensions and contradictions between competing goals of interrelated activity systems. -->
 <!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
@@ -415,14 +427,14 @@ Later larger contradictions of different scope are signposted and one key contra
 see updated table in tables subdirectory  
 -->
 
-The following table is provided to give the reader an overview of the stages and tools used. Emerging tensions in activity systems are used to explore the rationale for the creation and selection of these tools. Short descriptions of the tools used at each stage and links to the online resources created are available as appendix 4.x
+The following overview of tool use by stage concisely explore the rationale for their selection or production. Fuller descriptions of the tools used at each stage and links to the online resources created are available as appendix 4.x
 
 <!-- Table from
 https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit# -->
 
 | **Phase, Name and Date**| **Description** | **Starting Resources**         
 |--------|------------|--------------|
-|P1: Oct 2017 - Dec 2018; Experimental Course  | Participants started with a blank canvas and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. A minimal incomplete starting game code template was introduced to support students after the course has started.  Then One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students and the creation of a “half baked” game template |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
+|P1: Oct 2017 - Dec 2018; Experimental Course  | Participants started with no set plan or toolset and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. After several weeks, a minimal incomplete starting game code template was introduced in response to student need.  Then One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students and the creation of a “half baked” game template |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
 | P2: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
 | P3: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
 | P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
@@ -435,7 +447,7 @@ The following sections briefly outline tools and processes giving a synthesised 
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
 
-Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful. Extracts of feedback notes are included as appendix 4.x
+Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was base on the game genre of _platformer_ (see glossary), a move which helped to limit expectations of the technical limits of their game.  At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful. Extracts of feedback notes are included as appendix 4.x
 
 The end of this phase in mid to late 2018 involved responding to this feedback and working together with PGCE computing students and delivery three one-off workshops at conferences and a Manchester library fun day. The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process. The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences. The results in terms of engagement and impact on changing the game were very promising.
 
@@ -919,15 +931,27 @@ A later discussion section in this chapter illustrates a more complex interactio
 <!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
 -->
 
-#### Design behaviours encouraged through use of game template
+#### Design affordances included in the game template
 
-While the focus on this chapter is on design and designs decisions, the following sections include rough analysis of the impact of them. Fuller analysis follows in chapters five and six. To do this, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
+This section draws on HCI theory and in particular the concept of affordances.
 
-<!-- NOTE - HOW MUCH ON IMPACT? HOW MUCH IN CH5? -->
+While the focus on this chapter is on design and designs decisions, the following sections include brief analysis of the impact of them. BECAUSE
+Fuller analysis follows in chapters five and six.
 
-that had a high impact on the game experiences. These include changing gravity, altering the player speed, background colour of the game and the game layout of the platforms, hazards and food to collect.
+In the design of the template and in testing at the end of P1, I began to identify simple changes to the code that could provoke a high impact on the game experiences. The next sections describe and analyse these changes using affordance theory.
+
+<!-- list of changes
+background colour of the game
+game layout of the platforms - hazards and food to collect. -->
+
 
 **Variable editing for player movement**
+
+These include changing gravity, altering the player speed,
+
+I brought certain variables that had high impact on the game experiences to the very start of the code.
+
+EXAMPLE VIA ILLUSTRATION
 
 The starting template began with the game in a broken state. Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code.
 
@@ -942,9 +966,13 @@ The starting game template included a minimal amount of platforms, hazards to av
 <!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
 
 
-**Use of pixel art to seed narrative and art creativity**
+**Background colour and a pixel art**
 
-One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations. As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
+One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations.
+
+_Seeding narrative and art creativity_
+
+As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
 
 ![](./Pictures/whale_1.png){width=50%}
 
@@ -954,12 +982,17 @@ The process of creating a pixel art characters and hazard involved using an onli
 
 #### Introducing the quick start cards
 
-Brief help was available via in-line text code comments allowing for self-directed or previously proficient learners to progress with minimal support.
+Although, help was available via in-line text code comments, I noted that to notice and read these comments required a degree of proficiency or code familiarity that not all participants had.
 
-At the end of P1 trainee teachers created printable resources that highlighted particular key lines of code and variables (see figure 4.x below) and illustrated the relevant code changes needed.
+In early trial, I had relied on participant experimentation, direct instruction to individuals / pairs (via pointing), and resultant peer learning happening. I relied on small groups initially.  
+
+For larger groups this was not optimal, leaving some learners confused and unsupported. At the end of P1 I tasked trainee computing teachers in my faculty created printable resources that highlighted particular key lines of code and variables (see figure 4.x below) and illustrated the relevant code changes needed to create big changes in the game.
 
 ![](./Pictures/quickstart_phaser_1.png){width=50%}
 4.x - Example of a Quick start card
+
+The rationale aligns with the core motivations of UMC technique, to build familiarity with the code structure, and confidence in use of tools in an accelerated way. Also the larger change in the game play experience are motivating [find source], a concept that aligns with the concept of good feedback in HCI literature [find source].  
+
 
 <!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
 
@@ -967,14 +1000,22 @@ The templated game was structured to allow changes in code which were relatively
 
 #### Observations on design behaviours encouraged through use of game template
 
-While the initial use of a template was an intuitive response based on my own experience of teaching technology, as the template evolved, I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.
+The initial use of a template was an intuitive response based on my own experience of teaching technology. However, as the template evolved, I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.
 
-While the simple changes to the game dynamics and patterns embedded in the starting template were motivation and engagement, some participants soon began to ask how to make additions to the game.
+While the simple changes to the game dynamics and patterns embedded in the starting template helped motivation and engagement, some participants soon began to ask how to make additions to the game.
 
-  A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning.
+This point marks the pivot to the create _phase_ on the UMC model. Thus the shift from P1 to P2 involved a much more careful and structured experience for participants in U and M stages.
 
+While I do not have comparative video and interview evidence between P1 and P2, journal notes of observations of engagement support this interpretation and alignment with existing research. Broad, uncontroversial claims can be made. For example, new participants in P2 all maintained a working game thus able to share during each session. 
+
+<!-- NOTE
+MOVE? NEXT CHAPTER - ALSO NOT ALL PROGRESSED
+A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning. -->
+
+REMOVE DUPLICATION HERE
 At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
 
+DOES THIS LIVE HERE?
 Instead analysis of the video data of participants reveals a large number of broader digital literacy skills involved in certain processes. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learnign a complex chain of  these individual actions.
 
 <!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
