--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -180,9 +180,11 @@ For example, in the last chapter I described how the smaller quick changes could
 
 
 
-
-
 #### On GDPs as a concept to help analysis
+
+LATER?
+For this research, I have chosen to privilege the implementation of each pattern as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process [@barab_using_2002]. To help ground the reader, the following section describes this scope of the activity using the context of the above vignette.
+
 
 COMPRESS THIS OR DROP OR MOVE? - IT DOESN'T ADD A GREAT DEAL TO THE END FINDINGS?
 
